[gd_scene load_steps=2 format=3 uid="uid://cv8owgy7v2lhb"]

[ext_resource type="Script" uid="uid://bnfm6j6hkmq23" path="res://enemies/Limit.gd" id="1_l4xsx"]

[node name="Limit" type="Area2D"]
collision_layer = 0
collision_mask = 32769
script = ExtResource("1_l4xsx")

[node name="LimitArea" type="CollisionPolygon2D" parent="."]

[connection signal="body_entered" from="." to="." method="on_body_entered"]
[connection signal="body_exited" from="." to="." method="on_body_exited"]
